Added check auth route, splitted store into modules, started home page
