# backend/src/routes/auth.js
@@ -3,6 +3,8 @@ import { validate } from '../validator';
 import schemas from '../schemas/schemas';
 import * as serviceRegister from '../services/serviceManager';
 import { AuthenticationError, AuthService } from '../services/authService';
+import authMiddleware from '../middlewares/authMiddleware';
+import { commonOk } from '../commonPayload';
 
 const router = express.Router();
 const authService = serviceRegister.createGetter(AuthService.ID);
@@ -27,6 +29,10 @@ router.post('/refresh', validate({body: schemas.authRefresh}), (req, res, next) 
             token: authService().createToken()
         });
     }).catch(next); // Let the middleware handle it
+});
+
+router.get('/check', authMiddleware, (req, res, next) => {
+    res.json(commonOk);
 });
 
 export default router;
